footer responsive, overflow in card and links fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -372,20 +372,25 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 75px;
 }
 .restaurant-card .restaurant-card-description-container .restaurant-card-description {
   padding: 0px 15px;
+  min-width: 150px;
 }
 .restaurant-card .restaurant-card-description-container .restaurant-card-description h2 {
   font-size: 18px;
   margin-bottom: 5px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .restaurant-card .restaurant-card-description-container .restaurant-card-description p {
   margin-top: 0;
   font-weight: 300;
 }
 .restaurant-card .restaurant-card-description-container .restaurant-heart-container {
-  padding: 0px 25px 20px 25px;
+  padding: 0px 25px 20px 5px;
 }
 .restaurant-card .restaurant-card-description-container .restaurant-heart-container i {
   font-size: 26px;
@@ -430,7 +435,7 @@ header .location-container .location-content p {
 
 .restaurants-results {
   background-color: #F6F6F6;
-  padding: 40px 20px;
+  padding: 40px 20px 60px 20px;
   display: flex;
   flex-direction: column;
 }
@@ -438,12 +443,43 @@ header .location-container .location-content p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 15px;
 }
 @media (min-width: 992px) {
   .restaurants-results .restaurants-results-container {
     flex-direction: row;
   }
+}
+
+footer {
+  background-color: #363636;
+  color: white;
+  padding: 25px;
+}
+footer .footer-logo-container {
+  font-family: "Shrikhand", sans-serif;
+  font-size: 18px;
+  margin: 0 auto;
+  text-align: center;
+}
+footer .footer-links-container {
+  padding-left: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+@media (min-width: 992px) {
+  footer .footer-links-container {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+}
+footer .footer-links-container :nth-child(3), footer .footer-links-container :nth-child(4) {
+  font-weight: 300;
+}
+footer .footer-links-container .footer-link-element i {
+  width: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
