--- a/sass/layouts/_restaurants-results-section.scss
+++ b/sass/layouts/_restaurants-results-section.scss
@@ -1,13 +1,13 @@
 .restaurants-results {
     background-color: #F6F6F6;
-    padding: 40px 20px;
+    padding: 40px 20px 60px 20px;
     display: flex;
     flex-direction: column;
     .restaurants-results-container {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 20px;
+        gap: 15px;
         @media (min-width: 992px) {
             flex-direction: row;
         }
